# project-econ

./: API_keys.py  L0_all_data_get.py  L0_capital_availability_constraints.py  L0_energy_constraints.py  L0_labor_constraints.py  L0_tech_and_productivity_constraints.py  L1_all_data_get.py  L1_corp_profits_income_generators.py  L1_employment_lvl_income_generators.py  L1_govt_transfers_income_generators.py  L1_wage_growth_income_generators.py  L2_all_data_get.py  L2_corp_leverage_balance_sheet.py  L2_financial_conditions_balance_sheet.py  L2_household_assets_balance_sheet.py  L2_household_debt_balance_sheet.py  L3_all_data_get.py  L3_business_investment_spending_decisions.py  L3_consumer_spending_decisions.py  L3_govt_spending_decisions.py  L4_all_data_get.py  L4_corp_profits_prices_and_output.py  L4_inflation_prices_and_output.py  L4_production_prices_and_output.py  L5_all_data_get.py  L5_spx500_data.py  LICENSE  README.md  econ_model.py  module0_data_get_all.py  module1_data_standardize.py  module2_data_build_f0_and_lambda_df.py  module2_factor_discount.py  module2_factor_growth.py  module2_factor_risk_premium.py  module3_EM_algo.py  module3_walkforward_em.py  module4_spx_regression.py  module5_fundamental_valuation.py  module6_walk_forward_optimization.py  (+6 more)
