[project]
name = "project-econ"
version = "0.1.0"
description = "Dynamic Factor Model for macroeconomic return prediction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beaapi>=0.2.0",
    "beautifulsoup4>=4.14.3",
    "blinker>=1.9.0",
    "bls-api>=0.1.4",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.5",
    "click>=8.3.1",
    "contourpy>=1.3.3",
    "curl-cffi>=0.14.0",
    "cycler>=0.12.1",
    "dash>=4.0.0",
    "flask>=3.1.3",
    "fonttools>=4.62.0",
    "fredapi>=0.5.2",
    "frozendict>=2.4.7",
    "idna>=3.11",
    "importlib-metadata>=8.7.1",
    "inflection>=0.5.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "kiwisolver>=1.5.0",
    "lxml>=6.0.2",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "more-itertools>=10.8.0",
    "multitasking>=0.0.12",
    "narwhals>=2.18.0",
    "nasdaq-data-link>=1.0.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.3",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "patsy>=1.0.2",
    "peewee>=4.0.1",
    "pillow>=12.1.1",
    "platformdirs>=4.9.4",
    "plotly>=6.6.0",
    "protobuf>=7.34.0",
    "pycparser>=3.0",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "retrying>=1.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "soupsieve>=2.8.3",
    "statsmodels>=0.14.6",
    "threadpoolctl>=3.6.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "websockets>=16.0",
    "werkzeug>=3.1.6",
    "xlrd>=2.0.2",
    "yfinance>=0.2.66",
    "zipp>=3.23.0",
]
